--- a/jsc-loader/package.json
+++ b/jsc-loader/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "jsh-loader",
-  "version": "0.1.2",
-  "description": "javascript html template for webpack",
+  "name": "jsc-loader",
+  "version": "0.1.0",
+  "description": "javascript css loader for webpack",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "webpack",
-    "javascript",
-    "html",
-    "template"
+    "css",
+    "loader",
+    "webpack"
   ],
   "author": "edonet",
   "license": "ISC"
